--- a/style.css
+++ b/style.css
@@ -3,173 +3,118 @@ body{
   background: url(https://subtlepatterns.com/patterns/noise_lines.png);
   font-family: 'Pacifico', cursive;
   overflow: hidden;
-  color: #fff;
-}
-.bgoverlay{
-  background: rgb(103,58,183);
-  background: rgba(103,58,183,0.7);
-  position: absolute;
-  top:0;
-  left:0;
-  right:0;
-  bottom:0;
-}
-.container{
-  position: relative;
-  margin: 120px auto 0 auto;
-  width: 320px;
+  color: a5ffff;
 }
 
 
-.ico{
-  display: block;
-  width: 320px;
-  height: 320px;
+@-webkit-keyframes beat {
+    0% {-webkit-transform: scale(1) rotate(225deg); -webkit-box-shadow:0 0 40px rgba(213,9,60,1);}
+    50% {-webkit-transform: scale(1.1) rotate(225deg); -webkit-box-shadow:0 0 70px rgba(213,9,60,0.6);}
+    100% {-webkit-transform: scale(1) rotate(225deg); -webkit-box-shadow:0 0 40px rgba(213,9,60,1);}
 }
-.open .ico{
-  animation: open 4s;
-  transform: scale(10);
+@-moz-keyframes beat {  
+    0% {-moz-transform: scale(1) rotate(225deg); -moz-box-shadow:0 0 40px rgba(213,9,60,1);}
+    50% {-moz-transform: scale(1.1) rotate(225deg); -moz-box-shadow:0 0 70px rgba(213,9,60,0.6);}
+    100% {-moz-transform: scale(1) rotate(225deg); -moz-box-shadow:0 0 40px rgba(213,9,60,1);}
 }
-.ico .title{
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  margin-left: -95px;
-  margin-top: -73px;
-  z-index: 4;
-  font-size: 50px;
-  font-family: 'Pacifico', cursive;
-  color: #fff;
-  cursor: pointer;
-  text-shadow: 2px 4px 3px rgba(0,0,0,0.3);
+@keyframes beat {  
+    0% {transform: scale(1) rotate(225deg); box-shadow:0 0 40px #d5093c;}
+    50% {transform: scale(1.1) rotate(225deg); box-shadow:0 0 70px #d5093c;}
+    100% {transform: scale(1) rotate(225deg); box-shadow:0 0 40px #d5093c;}
 }
-.open .ico .title{
-  opacity: 0;
-  transition: all 0.3s ease;
-  top:-100px;
+            
+
+            
+            
+            
+            
+            
+            
+            
+            
+  @-webkit-keyframes justBeat {
+    0% {-webkit-transform: scale(1);  -webkit-box-shadow:0 0 40px rgba(213,9,60,1);}
+    50% {-webkit-transform: scale(1.1);  -webkit-box-shadow:0 0 70px rgba(213,9,60,0.6);}
+    100% {-webkit-transform: scale(1);  -webkit-box-shadow:0 0 40px rgba(213,9,60,1);}
 }
-.ico:before,
-.ico:after,
-.ico2:before,
-.ico2:after{
-  position: absolute;
-  top:0;
-  left:0;
+@-moz-keyframes justBeat {  
+    0% {-moz-transform: scale(1);  -moz-box-shadow:0 0 40px rgba(213,9,60,1);}
+    50% {-moz-transform: scale(1.1);  -moz-box-shadow:0 0 70px rgba(213,9,60,0.6);}
+    100% {-moz-transform: scale(1);  -moz-box-shadow:0 0 40px rgba(213,9,60,1);}
 }
-.ico:before,
-.ico:after,
-.ico2:before,
-.ico2:after{
-  display: block;
-  font-size: 20em;
-  color: #ff4081;
-  content: "\f004";
-  font-family: FontAwesome;
-  text-rendering: auto;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@keyframes justBeat {  
+    0% {transform: scale(1);  box-shadow:0 0 40px #d5093c;}
+    50% {transform: scale(1.1);  box-shadow:0 0 70px #d5093c;}
+    100% {transform: scale(1); box-shadow:0 0 40px #d5093c;}
+}         
+            
+            
+
+#background {
+    position:fixed;
+    top:0;
+    left:0;
+    z-index:-1;
+    width:100%;
+    height:100%;
+    background: #ffa5a5;
+    background: -moz-linear-gradient(top,  #ffa5a5 0%, #ffd3d3 100%);
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ffa5a5), color-stop(100%,#ffd3d3));
+    background: -webkit-linear-gradient(top,  #ffa5a5 0%,#ffd3d3 100%);
+    background: linear-gradient(top,  #ffa5a5 0%,#ffd3d3 100%);
 }
-.ico2:before,
-.ico2:after{
-  color: #e91e63;
+#chest {
+    position:relative;
+    width:500px;
+    height:450px;
+    margin:0 auto;
 }
-.ico:before{
-  z-index: 3;
+.heart {
+    position:absolute;
+    z-index:2;
+    background: -moz-linear-gradient(-180deg,  #F50A45 0%, #d5093c 40%);
+    background: -webkit-gradient(linear, right 50%, left 50%, color-stop(0%,#F50A45), color-stop(40%,#d5093c));
+    background: -webkit-linear-gradient(-180deg,  #F50A45 0%,#d5093c 40%);
+    background: linear-gradient(-180deg,  #F50A45 0%,#d5093c 40%);
+    -webkit-animation: beat 0.7s ease 0s infinite normal;
+    -moz-animation: beat 0.7s ease 0s infinite normal;
+    animation: beat 0.7s ease 0s infinite normal;
 }
-.ico:after{
-  animation: explode 4s infinite;
+.heart.center {
+    background: -moz-linear-gradient(-45deg,  #B80734 0%, #d5093c 40%);
+    background: -webkit-gradient(linear, left top, right bottom, color-stop(0%,#B80734), color-stop(40%,#d5093c));
+    background: -webkit-linear-gradient(-45deg,  #B80734 0%,#d5093c 40%);
+    background: linear-gradient(-45deg,  #B80734 0%,#d5093c 40%);
+}
+.heart.top {
+    z-index:3;
+}
+.side {
+    top:50px;
+    width:220px;
+    height:220px;
+    -moz-border-radius: 220px;
+    -webkit-border-radius: 220px;
+    border-radius: 220px;
+}
+.center {
+    width:210px;
+    height:210px;
+    bottom:100px;
+    left:145px;
+    font-size:0;
+    text-indent:-9999px;
+}
+.left {
+    left:62px;
+}
+.right {
+    right:62px;
+}
+.text {position:absolute; margin:125px 200px; z-index:9; font-size:50px; text-align:center; color:#FFF;line-height:40px;
+-webkit-animation: justBeat 0.7s ease 0s infinite normal;
+    -moz-animation: justBeat 0.7s ease 0s infinite normal;
+    animation: justBeat 0.7s ease 0s infinite normal;
 }
 
-
-.ico2:before{
-  animation: explodeSmall 3s infinite;
-}
-.ico2:after{
-  animation: explodeSmall 2s infinite;
-}
-
-
-.endtext{
-  opacity:0;
-  position: absolute;
-  top:-100px;
-  width:100%;
-}
-.open .endtext{
-  top:0;
-  opacity: 1;
-  animation: show 5s;
-}
-.endtext .close{
-  position: absolute;
-  top: 0;
-  right: 0;
-  cursor: pointer;
-  text-shadow: 2px 4px 3px rgba(0,0,0,0.3);
-}
-.endtext h1,
-.endtext h2,
-.endtext h3,
-.endtext h4,
-.endtext h5{
-  text-shadow: 2px 4px 3px rgba(0,0,0,0.3);
-  text-align: center;
-  font-weight: normal;
-}
-.endtext h1{
-  font-size: 50px;
-}
-.endtext h2{
-  font-size: 40px;
-}
-.endtext h3{
-  font-size: 40px;
-}
-.endtext h4{
-  font-size: 40px;
-}
-.endtext h5{
-  font-size: 20px;
-}
-
-@keyframes explode {
-    from {
-      transform: scale(1);
-      opacity: 1;
-    }
-    to {
-      transform: scale(1.6);
-      opacity: 0;
-    }
-}
-@keyframes explodeSmall {
-    from {
-      transform: scale(1);
-      opacity: 1;
-    }
-    to {
-      transform: scale(1.2);
-      opacity: 0;
-    }
-}
-
-
-@keyframes open {
-    from {
-      transform: scale(1);
-    }
-    to {
-      transform: scale(10);
-    }
-}
-
-@keyframes show {
-    from {
-      opacity: 0;
-      top: -100px;
-    }
-    to {
-      opacity: 1;
-      top:0;
-    }
-}
+.text span {font-size:25px; }
