--- a/style.css
+++ b/style.css
@@ -72,19 +72,19 @@ body{
 .heart {
     position:absolute;
     z-index:2;
-    background: -moz-linear-gradient(-180deg,  #F50A45 0%, #d5093c 40%);
-    background: -webkit-gradient(linear, right 50%, left 50%, color-stop(0%,#F50A45), color-stop(40%,#d5093c));
-    background: -webkit-linear-gradient(-180deg,  #F50A45 0%,#d5093c 40%);
-    background: linear-gradient(-180deg,  #F50A45 0%,#d5093c 40%);
+    background: -moz-linear-gradient(-180deg,  #d5093c 0%, #d5093c 40%);
+    background: -webkit-gradient(linear, right 50%, left 50%, color-stop(0%,#d5093c), color-stop(40%,#d5093c));
+    background: -webkit-linear-gradient(-180deg,  #d5093c 0%,#d5093c 40%);
+    background: linear-gradient(-180deg,  #d5093c 0%,#d5093c 40%);
     -webkit-animation: beat 0.7s ease 0s infinite normal;
     -moz-animation: beat 0.7s ease 0s infinite normal;
     animation: beat 0.7s ease 0s infinite normal;
 }
 .heart.center {
-    background: -moz-linear-gradient(-45deg,  #B80734 0%, #d5093c 40%);
-    background: -webkit-gradient(linear, left top, right bottom, color-stop(0%,#B80734), color-stop(40%,#d5093c));
-    background: -webkit-linear-gradient(-45deg,  #B80734 0%,#d5093c 40%);
-    background: linear-gradient(-45deg,  #B80734 0%,#d5093c 40%);
+    background: -moz-linear-gradient(-45deg,  #d5093c 0%, #d5093c 40%);
+    background: -webkit-gradient(linear, left top, right bottom, color-stop(0%,#d5093c), color-stop(40%,#d5093c));
+    background: -webkit-linear-gradient(-45deg,  #d5093c 0%,#d5093c 40%);
+    background: linear-gradient(-45deg,  #d5093c 0%,#d5093c 40%);
 }
 .heart.top {
     z-index:3;
